// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Organisms | ScrollableCard Default Story 1`] = `
.c6 {
  padding-left: 16px;
  padding-right: 16px;
}

.c1 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c7 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c9 {
  display: block;
}

.c3 {
  padding: 20px;
}

.c10 .c2 {
  padding-bottom: 8px;
}

.c4 {
  margin-bottom: 20px;
}

.c5 {
  position: relative;
}

.c8 {
  padding: 8px;
}

@media (min-width:976px) {
  .c0 {
    position: relative;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    height: 100%;
  }
}

@media (min-width:976px) {
  .c4 {
    max-height: 100%;
    overflow-y: auto;
  }
}

<div
  className="c0 c1"
>
  <header
    className="c2 c3"
  >
    Title
  </header>
  <div
    className="c4"
  >
    <div
      className="c5"
    >
      <div
        className="c6"
      >
        <ul
          className="c7"
        >
          <li
            className="c8 c9"
          >
            Lorem ipsum dolor sit amet
          </li>
          <li
            className="c8 c9"
          >
            Sed consequat erat lacinia
          </li>
          <li
            className="c8 c9"
          >
            Class aptent taciti sociosqu
          </li>
          <li
            className="c8 c9"
          >
            Aliquam bibendum tortor dui
          </li>
          <li
            className="c8 c9"
          >
            Quisque ac ullamcorper eros
          </li>
          <li
            className="c8 c9"
          >
            Etiam urna elit, mollis vel arcu id
          </li>
          <li
            className="c8 c9"
          >
            Sed consequat erat lacinia
          </li>
          <li
            className="c8 c9"
          >
            Aliquam bibendum tortor dui
          </li>
        </ul>
      </div>
      <div
        className=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Organisms | ScrollableCard With Height Contained 1`] = `
.c7 {
  padding-left: 16px;
  padding-right: 16px;
}

.c2 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c8 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c10 {
  display: block;
}

.c4 {
  padding: 20px;
}

.c11 .c3 {
  padding-bottom: 8px;
}

.c5 {
  margin-bottom: 20px;
}

.c6 {
  position: relative;
}

.c0 {
  height: 250px;
}

.c9 {
  padding: 8px;
}

@media (min-width:976px) {
  .c1 {
    position: relative;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    height: 100%;
  }
}

@media (min-width:976px) {
  .c5 {
    max-height: 100%;
    overflow-y: auto;
  }
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <header
      className="c3 c4"
    >
      Height contained
    </header>
    <div
      className="c5"
    >
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <ul
            className="c8"
          >
            <li
              className="c9 c10"
            >
              Lorem ipsum dolor sit amet
            </li>
            <li
              className="c9 c10"
            >
              Sed consequat erat lacinia
            </li>
            <li
              className="c9 c10"
            >
              Class aptent taciti sociosqu
            </li>
            <li
              className="c9 c10"
            >
              Aliquam bibendum tortor dui
            </li>
            <li
              className="c9 c10"
            >
              Quisque ac ullamcorper eros
            </li>
            <li
              className="c9 c10"
            >
              Etiam urna elit, mollis vel arcu id
            </li>
            <li
              className="c9 c10"
            >
              Sed consequat erat lacinia
            </li>
            <li
              className="c9 c10"
            >
              Aliquam bibendum tortor dui
            </li>
          </ul>
        </div>
        <div
          className=""
        />
      </div>
    </div>
  </div>
</div>
`;
